modules/gcp-compute-instance-envoy/envoy.yaml
admin:
  address:
    socket_address: { address: 10.190.0.34, port_value: 9901 }

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: '/var/log/envoy.log'
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: reimbursement
                      domains:
                        - "expenses.inmemory.xyz"
                      routes:
                        - match:
                            prefix: "/hello"
                          route:
                            cluster: reimbursement-backend
                        - match:
                            prefix: "/"
                          route:
                            cluster: reimbursement-frontend
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: reimbursement-backend
      connect_timeout: 1s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: reimbursement-backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 10.160.0.6
                      port_value: 9000
    - name: reimbursement-frontend
      connect_timeout: 1s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: reimbursement-frontend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 10.160.0.6
                      port_value: 9001
